force-app/main/default/objects/Invoice_Line_Items__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount to be billed for this line item.</description>
    <inlineHelpText>Amount to be billed for this line item.</inlineHelpText>
    <label>Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>