force-app/main/default/objects/Invoice_Line_Items__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <formula>Invoice__r.Document_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Number</label>
    <type>Text</type>
</CustomField>