force-app/main/default/objects/Invoice_Line_Items__c/fields/Employee_Tier__c.field-meta.xml
<CustomField>
    <fullName>Employee_Tier__c</fullName>
    <description>Not synced, derived internally from product name</description>
    <label>Employee Tier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>