force-app/main/default/objects/Invoice_Line_Items__c/fields/NetSuite_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Id__c</fullName>
    <description>Used by the Jitterbit integration and holds the NS Invoice Line Item ID</description>
    <externalId>true</externalId>
    <label>NetSuite Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>