force-app/main/default/objects/Invoice_Line_Items__c/fields/NetSuite_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sync_Error__c</fullName>
    <description>Used by the Jitterbit integration and holds any sync errors when integrating SFDC Invoice Line Items</description>
    <label>NetSuite Sync Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>