force-app/main/default/objects/Invoice_Line_Items__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Used by the Jitterbit integration and holds the Product Name from the NetSuite Invoice Line Item</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>