force-app/main/default/objects/Invoice_Line_Items__c/fields/Product_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Product_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product/Subscription to be added to the invoice</description>
    <inlineHelpText>Product/Subscription to be added to the invoice</inlineHelpText>
    <label>Product/Subscription</label>
    <referenceTo>Product_Subscription__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>