force-app/main/default/objects/Invoice_Line_Items__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Not synced, derived internally from product name</description>
    <label>Rate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>