force-app/main/default/objects/Invoice_Line_Items__c/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <description>Not synced, derived internally from product name</description>
    <label>Service Option</label>
    <length>40</length>
    <type>Text</type>
</CustomField>